# IBSEn

./: .gitignore  Absorbtion.py  Animate_IBS.py  DopplBoost_fit_plots.py  ElEv.py  For_Fermi_Flares.py  GetObsData.py  LC.py  LICENSE  LICENSE.md  Orbit.py  README.md  ShapeIBS.py  Show_ObsLightCurves.py  Show_precalc_LC_fits.py  Show_spectra.py  SpecIBS.py  TransportShock.py  environment.yml  ibsen_test_results_0_5_4.txt  ibsen_test_results_0_5_6.txt  pyproject.toml  requirements.txt  res_grid.nc  tab_gg_opac.py  test_animation.py  test_electr_evol.py  test_ibsen.py  test_spectra_lc.py
.ipynb_checkpoints/: requirements-checkpoint.txt
ObsData/: Fermi_specGreen_ch.txt  Fermi_spec_ch.txt  Hess_spec21.txt  Hess_spec21_tot.txt  Nicer2021.txt  StackedHessLC.txt  lc_ct14.night  lc_ct14_2021.night  light_curve.txt  light_curve.txt.npy  light_curve_101417.txt  light_curve_101417_full.txt  light_curve_2007.txt  light_curve_2010.txt  light_curve_2014.txt  light_curve_2017.txt  light_curve_2021.txt  light_curve_2024.txt  light_curve_2024_SwIn.txt  light_curve_2024_SwIn_new.txt  light_curve_all.txt  light_curve_bb.txt  out.spec  six_sp.qdp  six_sp_new.qdp  spec_21_18d_35d.spec  stack_mine.qdp
Outputs/: fit_lc_all_m320_110_normMF_bigCut.pkl  fit_lc_all_m320_110_normMF_normCut.pkl  fit_lc_all_m320_110_normMF_smallCut.pkl  fit_lc_all_m320_110_weakMF_normCut.pkl  fit_lc_all_m32_110_normMF_bigCut.pkl  fit_lc_all_m32_110_normMF_normCut.pkl  fit_lc_all_m32_110_normMF_smallCut.pkl  fit_lc_all_m32_110_weakMF_normCut.pkl  fit_lc_all_m32_40_normMF_bigCut.pkl  fit_lc_all_m32_40_normMF_normCut.pkl  fit_lc_all_m32_40_normMF_smallCut.pkl  fit_lc_all_m32_40_weakMF_normCut.pkl  fit_lc_all_noCool_normMF_bigCut.pkl  fit_lc_all_noCool_normMF_normCut.pkl  fit_lc_all_noCool_normMF_smallCut.pkl  fit_lc_all_noCool_weakMF_normCut.pkl
TabData/: Shocks4.nc  sgm_tbabs.txt  sgm_tbabs_new.txt
animations_dev/: test_animation.py
tutorial/: IBS_expanded.ipynb  SpectrumIBS_expanded.ipynb
tutorials/: ElectronEvolution_expanded.ipynb  ElectronEvolution_nonstationary.ipynb  Full_tutorial.ipynb  README.md  (+6 more)
(+57 files in other folders)
