[project]
name = "ibsen"
version = "0.4.0"
description = "IBS emission of a pulsar+OB-star binary"
authors = [{name = "Lesha"}]
dependencies = ["numpy"]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ibsen" = ["tab_data/*.nc",
           "absorbtion/absorb_tab/*.txt",
           "absorbtion/absorb_tab/*.nc"]


